--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@ body {
   font-family: 'Montserrat', sans-serif;
 }
 #header {
-  background-color: #00a09d;
+  background-color: #00939b;
   height: 150px;
   line-height: 150px;
 }
